<resources>
    <string name="app_name">Libaray Search</string>
    <string name="get_titles">Get titles</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="publisher">Publisher</string>
    <string name="isbn">Isbn</string>
    <string name="publishing_date">Publishing_date</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="borrowed_books">Borrowed books</string>
    <string name="reserved_books">Reserved books</string>
    <string name="announcements">Announcements</string>
    <string name="events">Events</string>
    <string name="settings">Settings</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="reset">Reset</string>
    <string name="search">search</string>
    <string name="title">Title</string>
    <string name="camera_photo">camera photo</string>
    <string name="request_permission">Give camera permission</string>
    <string name="title_activity_book_details">BookDetails</string>
</resources>
