<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C1D4DE"
        android:orientation="vertical">

        //title with image

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginBottom="8dp"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/shelf_image"
                android:layout_width="match_parent"
                android:layout_height="380dp" />


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#80000000"
                android:clickable="true"
                android:elevation="7dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="speak"
                android:padding="16dp"
                android:tag="title"
                android:text="title"
                android:textAlignment="textEnd"
                android:textColor="@color/icons"
                android:textSize="24sp" />


        </RelativeLayout>


        //buttons

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="3dp">

            <Button
                android:id="@+id/borrowBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:padding="2dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="Borrow"
                android:textSize="12sp" />

            <Button
                android:id="@+id/reserveBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:text="Reserve"
                android:textSize="12sp" />

            <Button
                android:id="@+id/favoriteBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:text="Favorite"
                android:textSize="12sp" />

        </LinearLayout>

        //Author section
        <androidx.cardview.widget.CardView
            android:id="@+id/author_section"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:onClick="speak"
            android:tag="author_section"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/author"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="textview"
                    android:typeface="normal" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    app:srcCompat="@drawable/cast_ic_mini_controller_mute" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        //description

        <androidx.cardview.widget.CardView
            android:id="@+id/description_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:onClick="speak"
            android:tag="description_section"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/des"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/description"
                        android:textAlignment="viewStart"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right"
                        app:srcCompat="@drawable/cast_ic_mini_controller_mute" />
                </LinearLayout>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fadeScrollbars="true"
                    android:isScrollContainer="true"
                    android:nestedScrollingEnabled="true"
                    android:overScrollMode="ifContentScrolls"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:text="TextView"
                    android:typeface="normal" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        //section1

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            //publisher

            <androidx.cardview.widget.CardView
                android:id="@+id/publisher_section"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="speak"
                android:tag="publisher_section"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/publisher"
                            android:textAlignment="viewStart"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="right"
                            app:srcCompat="@drawable/cast_ic_mini_controller_mute" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:typeface="normal" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            //isbn

            <androidx.cardview.widget.CardView
                android:id="@+id/isbn_section"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:onClick="speak"
                android:tag="isbn_section"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/isbn_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/isbn"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="right"
                            app:srcCompat="@drawable/cast_ic_mini_controller_mute" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/isbn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="number"
                        android:typeface="normal" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>


        //section2

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            //date

            <androidx.cardview.widget.CardView
                android:id="@+id/date_section"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="16dp"
                android:onClick="speak"
                android:tag="date_section"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/publishing_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="Date"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="right"
                            app:srcCompat="@drawable/cast_ic_mini_controller_mute" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/pDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="date"
                        android:typeface="normal" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            //section

            <androidx.cardview.widget.CardView
                android:id="@+id/section"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:onClick="speak"
                android:tag="section"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="Section"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="right"
                            app:srcCompat="@drawable/cast_ic_mini_controller_mute" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fiction" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            //status

            <androidx.cardview.widget.CardView
                android:id="@+id/status_section"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:onClick="speak"
                android:tag="status_section"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="Status"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="right"
                            app:srcCompat="@drawable/cast_ic_mini_controller_mute" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Can not be borrowed" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>




    </LinearLayout>


</ScrollView>
